# 3d_chess

./: .gitignore  CMakeLists.txt  CODEBLOCKS_SETUP.md  README.md
codeblocks/: 3d_chess_glut.cbp  3d_chess_glut.depend  3d_chess_glut.layout
src/: Board.cpp  Board.h  Camera.cpp  Camera.h  ChessGame.cpp  ChessGame.h  GlutGame.cpp  GlutGame.h  Input.cpp  Input.h  Math.h  Piece.cpp  Piece.h  Renderer.cpp  Renderer.h  main.cpp  main_glut.cpp
